<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/article_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_large_height"
        android:layout_marginTop="@dimen/image_margin"
        android:contentDescription="@string/photo_title"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/article_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:gravity="center|start"
        android:text="@string/placeholder_text"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        android:layout_margin="@dimen/article_margin"
        app:layout_constraintTop_toBottomOf="@+id/article_image"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/article_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/article_margin"
        android:gravity="center|start"
        android:text="@string/placeholder_text_main"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_title" />

    <TextView
        android:id="@+id/article_author"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/article_authors_dates_height"
        android:layout_margin="@dimen/article_margin"
        android:gravity="center"
        android:text="@string/placeholder_author"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintTop_toBottomOf="@+id/article_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/article_authors_dates_height"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="@dimen/text_size_normal"
        android:layout_marginEnd="@dimen/article_margin"
        app:layout_constraintTop_toBottomOf="@+id/article_author"
        app:layout_constraintBottom_toTopOf="@+id/readMore_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/readMore_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:color="@color/gray"
        android:gravity="center"
        android:text="@string/button_text"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
