<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/cardview_radius"
        app:cardElevation="@dimen/cardview_elevation"
        app:cardMaxElevation="@dimen/cardview_elevation"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_wrapper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_wrapper_height">

            <ImageView
                android:id="@+id/article_image"
                android:layout_width="@dimen/image_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/image_margin"
                android:layout_marginBottom="@dimen/image_margin"
                android:layout_marginStart="@dimen/image_margin"
                android:contentDescription="@string/photo_title"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/article_title"
                android:layout_width="@dimen/article_title_width"
                android:layout_height="@dimen/zero_dp"
                android:gravity="center|start"
                android:text="@string/placeholder_text"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:maxLines="4"
                app:layout_constraintBottom_toTopOf="@+id/date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/article_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/article_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>